# foocatmobypy

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/doctrees/source/: foocatmobypy.doctree  modules.doctree
docs/_build/html/: .buildinfo  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: foocatmobypy.rst.txt
docs/_build/html/source/: foocatmobypy.html  modules.html
docs/source/: modules.rst
foocatmobypy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_foocatmobypy.py
